router.html: Add missing gateway links
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -334,7 +334,7 @@
 							{%- else %}
 							<tr>
 							{%- endif %}
-								<td>{{ gw.mac }}</td>
+								<td><a href="{{ url_for('router_list', q='selected:^%s$' % gw.mac) }}">{{ gw.mac }}</a></td>
 								<td>{{ gw.batX }}</td>
 								<td>{{ gw.quality }}</td>
 								<td>{{ gw.netif }}</td>
