--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -333,7 +333,7 @@
 							{%- else %}
 							<tr>
 							{%- endif %}
-								<td>{{ gw.mac }}</td>
+								<td><a href="{{ url_for('router_list', q='selected:^%s$' % gw.mac) }}">{{ gw.mac }}</a></td>
 								<td>{{ gw.quality }}</td>
 								<td>{{ gw.netif }}</td>
 								<td>{{ gw.gw_class }}</td>
