Add batX information to gateway data
This requires changes to the MySQL database!

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -324,8 +324,8 @@
 							<tr>
 								<th>Gateway</th>
 								<th>batX</th>
-								<th>Quality</th>
-								<th>Interface</th>
+								<th>Qual</th>
+								<th>Netif</th>
 								<th>Class</th>
 							</tr>
 							{%- for gw in router.gws %}
