--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -158,6 +158,7 @@
 						<tr><th>Gateway</th><td>{{ gws_info[selectgw]["gw"] }}</td></tr>
 						<tr><th>Interface</th><td>{{ gws_info[selectgw]["gwif"] }}</td></tr>
 						<tr><th>MAC address</th><td>{{ selectgw }}</td></tr>
+						<tr><th>BatX interface</th><td>{{ gws_info[selectgw]["batX"] }}</td></tr>
 						{%- if gws_info[selectgw]["stats_page"] %}
 						<tr><th>Stats page</th><td>{{ gws_info[selectgw]["stats_page"] }}</td></tr>
 						{%- endif %}
