--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,14 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen bis 13.01.2018</h3>
+				<ul style="font-size:18px">
+				<li>Verbundene Gateways werden nun für jeden Router auf der Detailseite angezeigt</li>
+				<li>Alle Gateways werden nun ebenso wie die Hoods auf der Statistik-Seite angezeigt; wie für die Hoods sind selektive Statistiken möglich</li>
+				<li>Wird die Statistik-Seite nach Hoods gefiltert werden die entsprechenden Gateways angezeigt</li>
+				<li>Wird die Statistik-Seite nach Gateways gefiltert erhält man (sofern vom GW-Betreiber bereitgestellt) Information zum Gateway (Admin, Stats-Seite, ...)</li>
+				<li>Router k&ouml;nnen anhand der MAC-Adresse ihrer Gateways gesucht werden:<br />Alle Router mit GW: <span class="consolefont">gw:&lt;mac_of_vpnif&gt;</span> oder <span class="consolefont">bat:&lt;mac_of_batX&gt;</span><br />Alle Router, die GW ausgewählt haben: <span class="consolefont">selected:&lt;mac_of_vpn&gt;</span> oder <span class="consolefont">batselected:&lt;mac_of_batX&gt;</span></li>
+				</ul>
 				<h3>&Auml;nderungen bis 30.12.2017</h3>
 				<ul style="font-size:18px">
 				<li>Router-Popup in der Karte berücksichtigt aktivierte Layer</li>
