--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -131,8 +131,8 @@
 							<th class="firstrow">Gateway</th>
 							<th class="success" title="Online Routers">Online</th>
 							<th class="danger" title="Offline Routers">Offline</th>
+							<th class="warning" title="Unknown Routers">Unkn.</th>
 							<th class="active" title="Total Routers">Total</th>
-							<th class="info">Clients</th>
 							<th class="stats">Stats</th>
 						</tr>
 						{%- for mac, value in gws.items() %}
@@ -148,8 +148,8 @@
 							</td>
 							<td class="success"><span style="font-weight:bold">{{ value["selected"]["online"] or 0 }}</span> / {{ value["others"]["online"] or 0 }}</td>
 							<td class="danger"><span style="font-weight:bold">{{ value["selected"]["offline"] or 0 }}</span> / {{ value["others"]["offline"] or 0 }}</td>
+							<td class="warning"><span style="font-weight:bold">{{ value["selected"]["unknown"] or 0 }}</span> / {{ value["others"]["unknown"] or 0 }}</td>
 							<td class="active"><span style="font-weight:bold">{{ gws_sum[mac]["routers"] if gws_sum[mac] else 0 }}</span> / {{ value["others"]|sumdict if value["others"] else 0 }}</td>
-							<td class="info">{{ gws_sum[mac]["clients"] if gws_sum[mac] }}</td>
 							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % mac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
