statistics.html: Make "unknown" headline for GW table shorter
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -131,7 +131,7 @@
 							<th class="firstrow">Gateway</th>
 							<th class="success" title="Online Routers">Online</th>
 							<th class="danger" title="Offline Routers">Offline</th>
-							<th class="warning" title="Unknown Routers">Unknown</th>
+							<th class="warning" title="Unknown Routers">Unkn.</th>
 							<th class="active" title="Total Routers">Total</th>
 							<th class="stats">Stats</th>
 						</tr>
