--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -62,6 +62,7 @@
 						{%- endif %}
 						{%- if authadmin %}
 						<li><a href="#" onclick="$('#act').val('ban'); $('#actform').submit()">Ban Router</a></li>
+						<li><a href="#" onclick="$('#blockedform').submit()">Toggle blocked status</a></li>
 						{%- endif %}
 						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report abusive Router</a></li>
 					</ul>
@@ -153,7 +154,11 @@
 						</td></tr>
 						{%- endif %}
 						<tr><th>Hardware</th><td><span title="{{ router.chipset }}">{{ router.hardware }}</span></td></tr>
-						<tr><th>WAN Uplink</th><td><span class="{{ "glyphicon glyphicon-ok" if router.wan_uplink else "glyphicon glyphicon-remove" }}"></span></td></tr>
+						<tr><th>WAN Uplink</th><td><span class="{{ "glyphicon glyphicon-ok" if router.wan_uplink else "glyphicon glyphicon-remove" }}"></span>
+						{%- if router.blocked %}
+						<span style="color:#d90000"> &nbsp; - &nbsp; Router BLOCKED by KeyXchange!</span>
+						{%- endif -%}
+						</td></tr>
 						<tr><th>Clients</th><td>{{ router.clients }}</td></tr>
 					</table>
 				</div>
@@ -417,4 +422,11 @@
 			network_graph("br-mesh");
 		});
 	</script>
+	
+{%- if session.admin %}
+<form method="post" id="blockedform">
+	<input type="hidden" name="act" value="changeblocked" />
+	<input type="hidden" name="blocked" value="{{ "false" if router.blocked else "true" }}" />
+</form>
+{%- endif %}
 {% endblock %}
