--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,14 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen bis 18.01.2018</h3>
+				<ul style="font-size:18px">
+				<li>Netif-Statistiken werden nur noch 21 Tage erfasst, um die Ladezeit der Routerseite zu reduzieren</li>
+				<li>In der Hood-Übersichtstabelle wird nun die Zahl der aktiven Gateways als Spalte angezeigt</li>
+				<li>Die Hood- und Gateway-Übersichtstabellen können sortiert werden</li>
+				<li>Im KeyXchange gesperrte Router werden im Monitoring entsprechend markiert (diese Einstellung ist nicht live, sondern muss manuell von Admins vorgenommen werden)</li>
+				<li>Für Mesh-Router ohne Koordinaten wurde die virtuelle Hood "NoCoordinates" geschaffen; in der Default-Hood werden nur noch die Router angezeigt, die per VPN wirklich in der Default-Hood sind</li>
+				</ul>
 				<h3>&Auml;nderungen bis 13.01.2018</h3>
 				<ul style="font-size:18px">
 				<li>Verbundene Gateways werden nun für jeden Router auf der Detailseite angezeigt</li>
